--- a/src/app/App.module.css
+++ b/src/app/App.module.css
@@ -1,3 +1,11 @@
+.app {
+  --main-text-color: #374151;
+}
+
+.app {
+  color: var(--main-text-color);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +13,4 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
