--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,16 +1,19 @@
-.app {
+:root {
   --main-text-color: #374151;
-}
-
-.app {
-  color: var(--main-text-color);
 }
 
 body {
   margin: 0;
+  font-size: 16px;
+  line-height: 1;
+  color: var(--main-text-color);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html, body, #root {
+  height: 100%;
 }
